# self-healing-systems

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  references.md
app/: logic.py  main.py
contracts/: event-schema.json
healer/: classifier.py  fixers.py  injector.py  runner.py  types.py
scripts/: promote_good_image.sh
tests/: conftest.py  test_classifier.py  test_compute.py  test_fixers.py  test_heal_webhook.py  test_health.py  test_injector.py  test_reporter.py  test_runtime_simulation.py  test_webhook_service.py
tests/contracts/: README.md  test_event_schema_contract.py
tests/contracts/fixtures/invalid/: bad-severity.json  missing-event-id.json
tests/contracts/fixtures/valid/: heal.completed.event.json  heal.escalated.event.json
watchdog/: runtime_report.py  watchdog.py
webhook/: __init__.py  reporter.py  service.py
